Set up mongodb and mongoose
