# api/models/index.js
@@ -1,0 +1,9 @@
+var models = ['customer', 'workflowStatus'];
+
+for (var i in models) {
+    exports[capitalizeFirstLetter(models[i])] = require('./' + models[i] + 'Model');
+}
+
+function capitalizeFirstLetter(string) {
+    return string.charAt(0).toUpperCase() + string.slice(1);
+}
