# api/models/workflowStatusModel.js
@@ -1,0 +1,9 @@
+var mongoose = require('mongoose'),
+    Schema = mongoose.Schema;
+
+var WorkflowStatusSchema = new Schema({
+    name: String,
+    color: String
+});
+
+module.exports = mongoose.model('WorkflowStatus', WorkflowStatusSchema);
